.heading is static with margins .content is fixed top and bottom 0, width of 980 and centered. .tabs-nav is tucked more into the right so it doesnt overlap the scrollbars.

--- a/css/main.css
+++ b/css/main.css
@@ -207,27 +207,11 @@ body {
 	font-size:20px;
 	line-height:1.6em;
 	width:400px;
-	x-height:108px;
 	text-align:center;
-	position:absolute;
-	top:7%;
-	left:50%;
-	margin-left:-200px;
+	margin:70px auto 30px auto;
 	padding-bottom:35px;
 	text-transform:uppercase;
 }
-/*
-.heading {
-	background:url(../img/bg_heading.png) no-repeat center bottom;
-	color:#b6a170;
-	font-size:20px;
-	line-height:1em;
-	width:300px;
-	height:108px;
-	margin:80px auto 60px;
-	text-align:center;
-}
-*/
 .heading span {
 	color:#fff;
 	display:block;
@@ -239,10 +223,11 @@ body {
 	color:#dac7a2;
 	font-size:13px;
 	position:absolute;
-	top:36%;
-	bottom:50px;
-	width:84%;
-	margin:0 8%;
+	top:202px;
+	left:50%;
+	bottom:0;
+	width:980px;
+	margin:0 0 0 -490px;
 }
 /*
 .content {
@@ -321,7 +306,7 @@ h2 {
 	position: absolute;
 	right:-515px;
 	width: 450px;
-	padding-left:50px;
+	padding-left:15px;
 	height: 100%;
 	top: 0;
 	z-index: 5;
@@ -351,7 +336,7 @@ h2 {
 .tabs-nav {
 	position: absolute;
 	top: 42px;
-	left:-15px;
+	left:-50px;
 	width:50px;
 	height:120px;
 	z-index:2;
